--- a/frontend/astro-app/src/layouts/SEOheader.astro
+++ b/frontend/astro-app/src/layouts/SEOheader.astro
@@ -11,4 +11,6 @@ const { title, description, keywords } = Astro.props;
   <meta name="description" content={description} />
   <meta name="keywords" content={keywords} />
   <meta name="robots" content="index, follow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
 </head>
