adding rate limit

--- a/frontend/astro-app/src/pages/index.astro
+++ b/frontend/astro-app/src/pages/index.astro
@@ -73,7 +73,7 @@ const featuredCourses = await getFeaturedCourses();
     <!-- Right: Image -->
     <div class="w-full lg:w-1/2 flex justify-center lg:justify-end">
       <img
-        src="../../public/hero_illustration.svg"
+        src="/hero_illustration.svg"
         alt="Learning Illustration"
         class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl"
       />
