--- a/frontend/astro-app/src/layouts/BaseLayout.astro
+++ b/frontend/astro-app/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ import "../../global.css";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Daily Coding Lessons</title>
+    <title>DevLevelUp</title>
   </head>
   <body class=" bg-[#FFF8F1]">
     <slot />
